--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <div class="container">
 
         <div class="header">
-            <h2>weather</h2>
+            <h2>Ob-Havo</h2>
             <div class="weather-input">
-                <input type="text" name="city" id="city_input" placeholder="Enter city name">
+                <input type="text" name="city" id="city_input" placeholder="Shaxar nomini kiriting">
                 <button type="button" id="searchBtn">
-                    <i class="fa-regular fa-search"></i>Search
+                    <i class="fa-regular fa-search"></i>Qidiruv
                 </button>
                 <button type="button" id="locationBtn">
-                    <i class="bx bx-target-lock"></i>Current Location
+                    <i class="bx bx-target-lock"></i>Location Tanlang
                 </button>
             </div>
         </div>
@@ -36,7 +36,7 @@
                     
                     <div class="current-weather">
                         <div class="details">
-                            <p>Now</p>
+                            <p>Hozir</p>
                             <h2>__&deg;C</h2>
                             <p>____</p>
                         </div>
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="card">
-                    <h2>5 days Forecast</h2>
+                    <h2>5 Kunlik</h2>
                     <div class="day-forecast">
 
                         <div class="forecast-item">
@@ -102,13 +102,13 @@
 
             <div class="weather-right">
 
-                <h2>Today's Highlights</h2>
+                <h2>Bugungi kunning asosiy voqealari</h2>
                 <div class="highlights">
                     <div class="card">
                         
                         <div class="card-head">
-                            <p>Air Quality Index</p>
-                            <p class="air-index aqi-1">Good</p>
+                            <p>Havo sifati indeksi</p>
+                            <p class="air-index aqi-1">Yaxshi</p>
                         </div>
                         <div class="air-indices">
 
@@ -151,7 +151,7 @@
                     <div class="card">
 
                         <div class="card-head">
-                            <p>Sunrise-sunset</p>
+                            <p>Quyosh chiqishi-botishi</p>
                         </div>
 
                         <div class="sunrise-sunset">
@@ -161,7 +161,7 @@
                                     <i class="fa-light fa-sunrise fa-4x"></i>
                                 </div>
                                 <div>
-                                    <p>sunrise</p>
+                                    <p>Quyosh chiqishi</p>
                                     <h2>___</h2>
                                 </div>
                             </div>
@@ -171,7 +171,7 @@
                                     <i class="fa-light fa-sunset fa-4x"></i>
                                 </div>
                                 <div>
-                                    <p>sunset</p>
+                                    <p>Quyosh botishi</p>
                                     <h2>___</h2>
                                 </div>
                             </div>
@@ -179,7 +179,7 @@
                     </div>
                     <div class="card">
                         <div class="card-head">
-                            <p>Humdity</p>
+                            <p>Namlik</p>
                         </div>
                         <div class="card-item">
                             <i class="fa-light fa-droplet fa-2x"></i>
@@ -188,7 +188,7 @@
                     </div>
                     <div class="card">
                         <div class="card-head">
-                            <p>Pressure</p>
+                            <p>Bosim</p>
                         </div>
                         <div class="card-item">
                             <i class="fa-light fa-compass fa-2x"></i>
@@ -197,7 +197,7 @@
                     </div>
                     <div class="card">
                         <div class="card-head">
-                            <p>Visibility</p>
+                            <p>Ko'rinish</p>
                         </div>
                         <div class="card-item">
                             <i class="fa-light fa-compass fa-2x"></i>
@@ -206,7 +206,7 @@
                     </div>
                     <div class="card">
                         <div class="card-head">
-                            <p>Wind speed</p>
+                            <p>Shamol tezligi</p>
                         </div>
                         <div class="card-item">
                             <i class="fa-light fa-location-arrow fa-2x"></i>
@@ -215,7 +215,7 @@
                     </div>
                     <div class="card">
                         <div class="card-head">
-                            <p>Feels Like</p>
+                            <p>Jami Haorat</p>
                         </div>
                         <div class="card-item">
                             <i class="fa-light fa-temperature-list fa-2x"></i>
@@ -223,7 +223,7 @@
                         </div>
                     </div>
                 </div>
-                <h2>Today at</h2>
+                <h2>Bugun</h2>
 
                 <div class="hourly-forecast">
                     <div class="card">
